--- a/backend-nodejs/form.html
+++ b/backend-nodejs/form.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <h1>customers</h1>
-    <form action="/insert-data" method="post">
+    <form action="/insert-data" method="POST">
       <fieldset>
         <p>
           <img
